净室的基本框架6